# nanotation

./: CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  PROMPT.md  README.md
.github/workflows/: ci.yml  release.yml
src/: diff.rs  editor.rs  event_handler.rs  file.rs  file_tree.rs  git.rs  highlighting.rs  main.rs  models.rs  navigation.rs  text.rs  theme.rs  ui.rs  ui_diff.rs  ui_tree.rs
src/event_handler/: annotation.rs  idle.rs  mod.rs  quit.rs  search.rs  tree.rs
