[package]
name = "nanotation"
version = "0.2.1"
edition = "2024"


[[bin]]
name = "nanot"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
unicode-width = "0.1"
syntect = { version = "5.0", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
git2 = "0.19"
similar = "2.6"

[dev-dependencies]
tempfile = "3.10"

